--- a/test_canvas/index.html
+++ b/test_canvas/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Application visualisation de stocks</h1>
-        <canvas id="canvas1" width="1920" height="1080">
-    </canvas>
+    <div class="canvasContainer">
+    <canvas id="canvas1" width="1920" height="1080"></canvas></div>
 </button>
     <script src="index.js"></script>
 </body>
