--- a/test_canvas/index.html
+++ b/test_canvas/index.html
@@ -10,8 +10,10 @@
 <body>
     <h1>Application visualisation de stocks</h1>
     <div class="canvasContainer">
-    <canvas id="canvas1" width="1920" height="1080"></canvas></div>
-</button>
+        <div class="styleCanvas">
+            <canvas id="canvas1" width="4000" height="2000"></canvas>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>  
